--- a/Simulacion Ej 3/Ejercicio 3 - Aprendizaje Estadístico.ipynb
+++ b/Simulacion Ej 3/Ejercicio 3 - Aprendizaje Estadístico.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Julian Ferres - Padron: 101483"
+    "### Julian Ferres - Nro.Padrón 101483"
    ]
   },
   {
