--- a/Ejercicios/Informe/InformeGrymberg.tex
+++ b/Ejercicios/Informe/InformeGrymberg.tex
@@ -9,42 +9,42 @@
 \usepackage{fancyhdr}
 \usepackage{bbm}
 
-\pagestyle{fancy} % Encabezado y pie de pï¿½gina
+\pagestyle{fancy} % Encabezado y pie de página
 \fancyhf{}
 \fancyhead[L]{Sebastian Elizade - Julian Ferres}
-\fancyhead[R]{Aprendizaje Estadï¿½stico - FIUBA}
+\fancyhead[R]{Aprendizaje Estadístico - FIUBA}
 \renewcommand{\headrulewidth}{0.4pt}
 \fancyfoot[C]{\thepage}
 \renewcommand{\footrulewidth}{0.4pt}
 
-\title{ \Huge \textbf{Colecciï¿½n de Ejercicios Propuestos y sus resoluciones\\}}
+\title{ \Huge \textbf{Colección de Ejercicios Propuestos y sus resoluciones\\}}
 \author{
 	\Huge Sebastian Elizalde
 	\\
-	\LARGE \textit{Padrï¿½n Nro. 96092}        \\
+	\LARGE \textit{Padrón Nro. 96092}        \\
 	\LARGE    \texttt{sebi.elizalde@gmail.com}                                              \\[2.5ex]
 	\\
 	\Huge Julian Ferres
 	\\
-	\LARGE \textit{Padrï¿½n Nro. 101483}                     \\
+	\LARGE \textit{Padrón Nro. 101483}                     \\
 	\LARGE    \texttt{julianferres@gmail.com}                                              \\[2.5ex]
 	\LARGE   2do. Cuatrimestre de 2018                                      \\        
 	\\
-	\LARGE  Aprendizaje Estadï¿½stico - Sebastian Grymberg  \\        
+	\LARGE  Aprendizaje Estadístico - Sebastian Grymberg  \\        
 	\\
-	\LARGE  Facultad de Ingenierï¿½a, Universidad de Buenos Aires            \\}
+	\LARGE  Facultad de Ingeniería, Universidad de Buenos Aires            \\}
 \date{}
 \begin{document}
 	\maketitle
-	% quita el nï¿½mero en la primer pï¿½gina
+	% quita el número en la primer página
 	\thispagestyle{empty}
 	\newpage
 	\tableofcontents
 	\newpage
-	\section{Introducciï¿½n}
+	\section{Introducción}
 	
 
-	\section{Lista de enunciados}
+	\section{Lista de enunciados y sus soluciones}
 	
 	
 	
@@ -52,7 +52,7 @@
 	
 	\subsubsection{Ejercicio 1}
 	
-	Sea una funciï¿½n convexa $f(x)$ no negativa, $x_0,x_1,x_2$ tales que:
+	Sea una función convexa $f(x)$ no negativa, $x_0,x_1,x_2$ tales que:
 	
 	\begin{itemize}
 		
@@ -76,7 +76,7 @@
 	\end{itemize}
 	
 	
-	Quedan dudas de cuï¿½l de los siguientes era el planteo:
+	Quedan dudas de cuál de los siguientes era el planteo:
 	Comprobar la siguiente desigualdad:
 	f(p?x?+p?x?) p?f(x?) + p?f(x?) 
 	
@@ -93,7 +93,7 @@
   $E[\Phi(x)Y| X] = \Phi(x)E[Y|X]$
 	
 	
-	\subsubsection{Ejercicio 3 (STOP) (SIMULACIï¿½N)}
+	\subsubsection{Ejercicio 3 (STOP) (SIMULACIÓN)}
 	
 	Sea $ X \sim \mathcal{N}(0,\, 1)$ truncada al intervalo $\left[-1,1\right]$	
 	
@@ -111,20 +111,20 @@
 	   $
 	\\
 
-	Dado un $x$, la distribuciï¿½n condicional de $Y - m(x)$ es
+	Dado un $x$, la distribución condicional de $Y - m(x)$ es
 	$\mathcal{N}(0,\, \sigma^2(x))$
 	
 	Con $\sigma(x)=0.2-0.1\cos(2x)$\\
 	
 	Se pide simular $200$ puntos $(X,Y)$, y graficarlos en un plano. 
 	
-	Ademï¿½s, se piden los $200$ pares ordenados en cuestiï¿½n, para hacer anï¿½lisis posteriores.
+	Además, se piden los $200$ pares ordenados en cuestión, para hacer análisis posteriores.
 	
 	
 	\subsubsection{Ejercicio 4 (no entregable)}
 	
 
-	Dado el problema de decisiï¿½n introducido en el ï¿½Diseï¿½o del receptor de una comunicaciï¿½n binariaï¿½, verificar que:\\ 
+	Dado el problema de decisión introducido en el 'Diseño del receptor de una comunicación binaria', verificar que:\\ 
 	$\delta(r) = \mathbbm{1}\{{ P(S=1 | R=r) > P(S=0 | R = r) }\}$\\ maximiza:\\
 	$P(S=\delta(r)) =P(S=\delta(0) | R=0)P(R=0) + P(S=\delta(1) | R=1)P(R=1)$
 	
@@ -136,7 +136,7 @@
 	
 	$$ P(X,Y) = \int_{0}^{\frac{1}{2}} (1-x) dx + \int_{\frac{1}{2}}^{\frac{3}{4}} x dx $$
 	
-    SoluciÃ³n
+    \textbf{\underline{Solución:}}
     
     $$ P(X,Y) = \int_{0}^{\frac{1}{2}} (1-x) dx + \int_{\frac{1}{2}}^{\frac{3}{4}} x dx $$
 	$$ = \int_{0}^{\frac{1}{2}} 1 dx - \int_{0}^{\frac{1}{2}} x dx + \int_{\frac{1}{2}}^{\frac{3}{4}} x dx $$
@@ -150,7 +150,7 @@
 	
 	$$ Y = \mathbbm{1}\{T + F + E < 7\}$$
 	
-	Se tenia que $E$ era inobservable. Y se concluyï¿½ que:
+	Se tenia que $E$ era inobservable. Y se concluyó que:
 	
 	$$ g^*(T,F) = \mathbbm{1}\{ T+ F < 7 - \ln{2}\}$$
 	
@@ -158,7 +158,7 @@
 	
 	$$L^* = P ( g*(T,F) \neq Y)$$
 	
-	SoluciÃ³n
+\textbf{\underline{Solución:}}
 	
 	$$L^* = P ( g*(T,F) \neq Y) $$
 	$$ = P(T + B < 7 - log2 , T + B + E \geq 7) + P(T + B \geq 7 - log2, T + B + E < 7)$$
@@ -173,20 +173,20 @@
 	\subsection{Clase 3}
 	
 	\subsubsection{Ejercicio 7}
-	Se querï¿½a acotar:\\
+	Se quería acotar:\\
 	
 	$E \left[ | \eta^{*} (x) - \eta(x)| \right]  < \epsilon  $	\\
 	
-	Para $\epsilon>0$ existe una funciï¿½n $\eta_{\epsilon}$ uniformemente continua a valores en el intervalo $\left[ 0, 1 \right]$ sobre un conjunto compacto $C$ que se anula fuera de $C$, y que tiene la siguiente propiedad:\\
+	Para $\epsilon>0$ existe una función $\eta_{\epsilon}$ uniformemente continua a valores en el intervalo $\left[ 0, 1 \right]$ sobre un conjunto compacto $C$ que se anula fuera de $C$, y que tiene la siguiente propiedad:\\
 	$E[ |\eta_\epsilon(x) - \eta(x)| ] < \epsilon $ \\
 	
 	Por la desigualdad triangular:\\
 	
 	$E\left[ |\eta^*(x) - \eta(x)| \right] \leq E[ |\eta ^*(x) - \eta_\epsilon ^*(x)| ] + E[ |\eta^*_\epsilon(x) - \eta_\epsilon(x)| ] + E[ |\eta_\epsilon(x) - \eta(x)| ]$\\
 		
-	En clase se acotaron tanto el tercer tï¿½rmino como el segundo del segundo miembro de la desigualdad, y el ejercicio es entender  por quï¿½ el primer tï¿½rmino estï¿½ acotado por el tercero.
+	En clase se acotaron tanto el tercer término como el segundo del segundo miembro de la desigualdad, y el ejercicio es entender  por qué el primer término está acotado por el tercero.
 	
-	\subsubsection{Ejercicio 8 (STOP)(SIMULACIï¿½N)}
+	\subsubsection{Ejercicio 8 (STOP)(SIMULACIÓN)}
 	
 	Dado el siguiente diagrama:
 	\begin{center}
@@ -196,9 +196,9 @@
 	
 	Sean:\\
 	
-	$X$ una variable aleatoria con distribuciï¿½n uniforme sobre el triangulo \textbf{azul}.\\
+	$X$ una variable aleatoria con distribución uniforme sobre el triangulo \textbf{azul}.\\
 	
-	$Y$ una variable aleatoria con distribuciï¿½n uniforme sobre el triangulo \textbf{rojo}.\\
+	$Y$ una variable aleatoria con distribución uniforme sobre el triangulo \textbf{rojo}.\\
 	
 	$Z$ se define como: 	
 	 $Z = \frac{1}{2}X + \frac{1}{2}Y$\\
@@ -211,7 +211,7 @@
 	
 	\item	Generar muestras a clasificar uniformes sobre el cuadrado completo.
 	
-	\item	Construir una regla del histograma y clasificar las muestras de 2. segï¿½n lo aprendido en 1. .
+	\item	Construir una regla del histograma y clasificar las muestras de 2. según lo aprendido en 1. .
 	
 	\item	Graficar los resultados.
 	
@@ -228,12 +228,12 @@
 	Se pide:
 	\begin{enumerate}
 	
-		\item	Generar muestras de N = 100, 1000, ï¿½, otros valores. Estas dos serï¿½n las clases en las que clasificar los puntos.
+		\item	Generar muestras de N = 100, 1000, ... , otros valores. Estas dos serían las clases en las que clasificar los puntos.
 		
 		\item 
-		Generar puntos con una distribuciï¿½n uniforme en $\left[-4, 4\right] \times \left[-4, 4\right]$.
+		Generar puntos con una distribución uniforme en $\left[-4, 4\right] \times \left[-4, 4\right]$.
 		
-		\item Clasificar los puntos de la uniforme usando $KNN$, con $K = 1, 3$ y $13$, utilizando las clases del primer ï¿½tem.
+		\item Clasificar los puntos de la uniforme usando $KNN$, con $K = 1, 3$ y $13$, utilizando las clases del primer item.
 		
 		\item Graficar los resultados.
 	\end{enumerate}
@@ -243,7 +243,7 @@
 	
 
 	\subsubsection{Ejercicio 9 bis}
-	ï¿½Redactar una carilla que contenga la informaciï¿½n relevante sobre la distribuciï¿½n normal multivariada. Llevar ejemplos, y mostrar como cambia el grï¿½fico al variar la matriz de covarianza.ï¿½
+	"Redactar una carilla que contenga la información relevante sobre la distribución normal multivariada. Llevar ejemplos, y mostrar como cambia el gráfico al variar la matriz de covarianza."
 		
 	\subsubsection{Ejercicio 10}
 	
@@ -273,11 +273,11 @@
 	
 	
 	\subsubsection{Ejercicio 12}
-	En clase se demostrï¿½ la primer desigualdad de la hipotesis del ejercicio anterior.\\ Se pide como ejercicio demostrar la segunda desigualdad de la hipotesis.
+	En clase se demostró la primer desigualdad de la hipotesis del ejercicio anterior.\\ Se pide como ejercicio demostrar la segunda desigualdad de la hipotesis.
 	
 	\subsubsection{Ejercicio 13}
 	
-	Dada la funciï¿½n:
+	Dada la función:
 	
 	$$ \Phi(u) = \ln{p e^u +1 -p} - pu$$
 	
@@ -299,7 +299,7 @@
 		\label{fig:enunciado-ej14}\\
 	\end{center}
 	
-	Elegir cuï¿½l es el mejor para las clases y los puntos generados en el ejercicio 8.
+	Elegir cuál es el mejor para las clases y los puntos generados en el ejercicio 8.
 	
 	\subsection{Clase 6}
 	
@@ -329,14 +329,6 @@
 		
 		\item $N_{A'} (z_1,z_2,\cdots, z_n)$
 	\end{enumerate}
-	
-	\subsubsection{Ejercicio 17}
-	Leer el capï¿½tulo 14 del libro ï¿½A Probabilistic Theory of Pattern Recognitionï¿½ y hacer los tres ejercicios de cï¿½lculo de dimensiï¿½n Vapnik-Chervonenkis.
-	
-	
-	\subsubsection{Ejercicio 18}
-	Luego de la demostraciï¿½n de los caballos, guitarras, La Pampa y la felicidad de Hoeffding, demostrar Glivenko-Cantelli. Aparentemente, la demostraciï¿½n es parecida a Vapnik-Chervonenkis (la hicimos en clase), pero menos general.
-	
 	
 	
 	\section{Conclusiones}
