--- a/Ejercicios/Informe/InformeGrymberg.tex
+++ b/Ejercicios/Informe/InformeGrymberg.tex
@@ -599,14 +599,17 @@
 		
 		Los subconjuntos con mas de un elemento quedan completamente definidos simplemente eligiendo sus elementos extremos,
 		
-		Luego hay $nC2 = \frac{n(n-1)}{2}$ de estos, sumados a los $n$ conjuntos de un elemento y al conjunto vacío, se tiene que:
+		Luego hay $\binom{n}{2} = \frac{n(n-1)}{2}$ de estos, sumados a los $n$ conjuntos de un elemento y al conjunto vacío, se tiene que:
 		
 		$$N_{A'} (z_1,z_2,\cdots, z_n) = \frac{n(n-1)}{2} +n +1 $$
 		
-		En caso $n=3$ es inmediato habiendo deducido este, por lo tanto 
+		En caso $n=3$ es inmediato habiendo deducido este, por lo tanto.
 		
 		$$N_{A'} (z_1,z_2,z_3) = \frac{3(3-1)}{2} +3 +1  = 7.$$
 		
+		Que coincide con el cardinal del conjunto (hallado de forma exhaustiva):
+		
+		$$ \{\emptyset, \{z_1\},\{z_2\},\{z_3\} ,\{z_1,z_2\} , \{z_2,z_3\} , \{z_1,z_2,z_3\}\}$$		
 		
 	
 \end{document}
