Agrego funcion perdida al clasificador KNN

--- a/Ejercicios/04-Comparacion de Costos/costos.ipynb
+++ b/Ejercicios/04-Comparacion de Costos/costos.ipynb
@@ -647,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$L_n( \\Phi) = \\frac{1}{n} \\sum_{i=1}^n \\mathbf{1}\\{\\Phi(X_i) \\neq Y_i\\}$$"
+    "$$\\widehat{L}_n( \\Phi) = \\frac{1}{n} \\sum_{i=1}^n \\mathbf{1}\\{\\Phi(X_i) \\neq Y_i\\}$$"
    ]
   },
   {
@@ -872,7 +872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$L_n( \\Phi) = \\frac{1}{n_{test}} \\sum_{i=1}^{n_{test}} \\mathbf{1}\\{\\Phi(X_i) \\neq Y_i\\}$$"
+    "$$\\widehat{L}_n( \\Phi) = \\frac{1}{n_{test}} \\sum_{i=1}^{n_{test}} \\mathbf{1}\\{\\Phi(X_i) \\neq Y_i\\}$$"
    ]
   },
   {
